Update .gitignore to prevent test files from being committed
- Added talosconfig and *.yaml exclusions
- Included exceptions for legitimate YAML files in examples/, package/, .github/, and cluster/ directories
- Prevents accidental commit of test configurations and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ Thumbs.db
 /main
 /provider
 /crossplane-*
+
+# Test and configuration files (should never be committed)
+talosconfig
+*.yaml
+!examples/**/*.yaml
+!package/**/*.yaml
+!.github/**/*.yaml
+!cluster/**/*.yaml
