--- a/package/crds/machine.talos.crossplane.io_secrets.yaml
+++ b/package/crds/machine.talos.crossplane.io_secrets.yaml
@@ -73,6 +73,10 @@ spec:
               forProvider:
                 description: SecretsParameters are the configurable fields of a Secrets.
                 properties:
+                  node:
+                    description: Node is the Talos node endpoint for secrets validation
+                      (optional)
+                    type: string
                   talosVersion:
                     description: TalosVersion is the Talos version for feature compatibility
                     type: string
