--- a/package/crds/machine.talos.crossplane.io_configurations.yaml
+++ b/package/crds/machine.talos.crossplane.io_configurations.yaml
@@ -129,6 +129,10 @@ spec:
                     - controlplane
                     - worker
                     type: string
+                  node:
+                    description: Node is the Talos node endpoint for configuration
+                      management (required)
+                    type: string
                   talosVersion:
                     description: TalosVersion is the Talos version (optional)
                     type: string
@@ -136,6 +140,7 @@ spec:
                 - clusterEndpoint
                 - clusterName
                 - machineType
+                - node
                 type: object
               managementPolicies:
                 default:
